<resources>
    <string name="app_name">Trip</string>
    <string name="EtEmail" />
    <string name="etPassword" />
    <string name="btnLogin">Login</string>
    <string name="btnSignUp">SignUp</string>
    <string name="etName" />
    <string name="etlastName" />
    <string name="etEmail1" />
    <string name="etChoosePwd" />
    <string name="etrepeatpwd" />
    <string name="btnCancel">Cancel</string>
    <string name="btnSignUp1">SignUp</string>
    <string name="textViewName" />
    <string name="etMessage" />
    <string name="textViewMessage1" />
    <string name="textViewSenderName" />
    <string name="textViewUpdateTime" />
    <string name="textViewSenderNameImg" />
    <string name="textviewUpdatetime1" />
    <string name="BtnCreateTrip_label">Add New Trip</string>
    <string name="TxtViewMyTripLabel_hdng">My Trips:</string>
    <string name="txtVwOthersTripsHdng_label">Others Trips:</string>
    <string name="TxtviewTriptitle_label" />
    <string name="textviewcreatedBy_label" />
    <string name="txtview_tripName" />
    <string name="btnadd_label">Add</string>
    <string name="editTexttripName" />
    <string name="etLocation_label" />
    <string name="textVTitleHdng">Title</string>
    <string name="txtViewLocHdng">Location:</string>
    <string name="uploadImgHdng_label">Upload Image:</string>
    <string name="txtVMsgsAct_label">Your Msgs go here</string>
    <string name="txtViewCreatedOn" />
    <string name="BtnJoinTrip_label">Join</string>
    <string name="TxtViewNotrip_label" />
    <string name="textViewNotrips2_label">No trips to display</string>
    <string name="etwritemsg_label" />
    <string name="txtviewTripNameLocation_label">TripName,Location.</string>
    <string name="tvL1msg" />
    <string name="tvL1senderName_label" />
    <string name="tvL1timesent_label" />
    <string name="txtviewL2message_label" />
    <string name="txtviewsenderName_label">zzzz</string>
    <string name="textView" />
    <string name="txtViewNotripshdng1_label">No trips to show</string>
    <string name="txtViewNotripsHdng2_label">No trips to show.</string>

</resources>
