<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.hw09.SignUpActivity"
    android:background="@drawable/gradient">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/etlastName"
        android:ems="10"
        android:layout_below="@+id/editTextFirstName"
        android:layout_alignRight="@+id/editTextFirstName"
        android:layout_alignEnd="@+id/editTextFirstName"
        android:layout_marginTop="16dp"
        android:id="@+id/editTextlastName"
        android:hint="Last Name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/etChoosePwd"
        android:ems="10"
        android:layout_below="@+id/editTextEmail1"
        android:layout_alignRight="@+id/editTextEmail1"
        android:layout_alignEnd="@+id/editTextEmail1"
        android:layout_marginTop="15dp"
        android:id="@+id/editTextChoosePassword"
        android:hint="Choose Password"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/etrepeatpwd"
        android:ems="10"
        android:layout_below="@+id/editTextChoosePassword"
        android:layout_alignRight="@+id/editTextChoosePassword"
        android:layout_alignEnd="@+id/editTextChoosePassword"
        android:layout_marginTop="18dp"
        android:id="@+id/editTextrepeatPwd"
        android:hint="Repeat Password"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/etName"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:id="@+id/editTextFirstName"
        android:hint="First Name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/etEmail1"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:id="@+id/editTextEmail1"
        android:hint="Email"
        android:layout_below="@+id/editTextlastName"
        android:layout_alignLeft="@+id/editTextlastName"
        android:layout_alignStart="@+id/editTextlastName" />

    <Button
        android:text="@string/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextrepeatPwd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="31dp"
        android:id="@+id/buttonCancel" />

    <Button
        android:text="@string/btnSignUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonCancel"
        android:layout_alignRight="@+id/editTextrepeatPwd"
        android:layout_alignEnd="@+id/editTextrepeatPwd"
        android:id="@+id/buttonSignUp1" />
</RelativeLayout>
