<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.hw09.TripActivity"
    android:background="@drawable/gradient">

    <TextView
        android:text="@string/TxtViewMyTripLabel_hdng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAddTrip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textViewMyTriphedding"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textViewMyTriphedding"
        android:layout_height="200dp"
        android:id="@+id/listView_MyTrips" />

    <TextView
        android:text="@string/txtVwOthersTripsHdng_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textViewOthersTripshedding"
        android:layout_below="@+id/listView_MyTrips"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <Button
        android:text="@string/BtnCreateTrip_label"
        android:layout_width="wrap_content"
        android:id="@+id/buttonAddTrip"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="match_parent"
        android:id="@+id/listView_othersTrips"
        android:layout_height="200dp"
        android:layout_below="@+id/textViewOthersTripshedding"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- <TextView
         android:text="You dont have any trips to show"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textViewNoTrips"
         android:visibility="invisible"
         android:textColor="@android:color/black"
         android:layout_below="@+id/buttonAddTrip"
         android:layout_centerHorizontal="true" />

     <TextView
         android:text="@string/textViewNotrips2_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textViewNoTrips2"
         android:visibility="invisible"
         android:textColor="@android:color/black"
         android:layout_above="@+id/listView_othersTrips"
         android:layout_toRightOf="@+id/textViewOthersTripshedding"
         android:layout_toEndOf="@+id/textViewOthersTripshedding"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp" />-->

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewWelcome"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@color/colorAccent" />

    <TextView
        android:text="No trips to show."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewMyTriphedding"
        android:layout_toRightOf="@+id/textViewWelcome"
        android:layout_toEndOf="@+id/textViewWelcome"
        android:id="@+id/textViewNotripsHdng1"
        android:textColor="@android:color/black"
        android:visibility="invisible"/>

    <TextView
        android:text="No trips to show."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewOthersTripshedding"
        android:layout_alignRight="@+id/textViewNotripsHdng1"
        android:layout_alignEnd="@+id/textViewNotripsHdng1"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/textViewNotripsHdng2"
        android:textColor="@android:color/black"
        android:visibility="invisible"/>
</RelativeLayout>